tests/fixtures/invalid/pow_bytes_str_float.py
# Cannot call pow() with Bytes, Str, Float
x = pow(b"hello", "hello", 1.0)
